[package]
name = "webdown-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
tokio = { workspace = true }
